orientation: Fix orientation setting on startup

This makes sure that XRandR is actually available when trying to
rotate the screen during login as the GDBusProxy might have got
created but the service isn't available.

https://bugzilla.gnome.org/show_bug.cgi?id=751713